# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: lint-check.yml  pyci.yml
gen_diff/scripts/: gendiff.py
gendiff/: __init__.py  generator.py  parse_files.py
gendiff/formats/: json_format.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_float_file_comparsion.py  test_gendiff.py  test_generate_diff.py
tests/fixtures/: correct_json_result.txt  file1.json  file1.yml
