[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ihar Kostyuchik <kostyuchik22@gmail.com>"]
readme = "README.md"
packages = [{include = "gen_diff"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gen_diff.scripts.gendiff:main"